--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.App{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    background-image: url(./assets/img/background.png);
+}
+.gradient1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.gradient2 {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    z-index: -2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gradient3 {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
 }
