--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 .footerCont{
+    width: 99.9%;
     margin-top: 150px;
     display: flex;
     flex-direction: column;
@@ -10,7 +11,7 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(7px);
     h4{
-        font-family: 'Italiana';
+        font-family: 'Days One';
         font-style: normal;
         text-transform: uppercase;
         font-weight: 400;
