animations on Scroll

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@
     bottom: 0;
     z-index: -2;
 }
+.vector {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+}
