--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -3,14 +3,7 @@ $fontColor: #ffffff;
 $textColor: #D1D1D1;
 
 
-//background images
-.vector{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-}
+
 .portfolio{
     
     .headerCont{
@@ -24,6 +17,7 @@ $textColor: #D1D1D1;
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-bottom: 20px;
             h1{
                 margin:0;
                 font-family: 'Days One';
@@ -38,7 +32,7 @@ $textColor: #D1D1D1;
                 font-family: 'Bai Jamjuree';
                 font-style: normal;
                 font-weight: 700;
-                font-size: 24px;
+                font-size: 20px;
                 line-height: 30px;
                 margin: 0;
                 display: flex;
@@ -51,54 +45,68 @@ $textColor: #D1D1D1;
                 }
             }
         }
-        button{
-            background: linear-gradient(to right, #E80ECD, #FE0072);
-            color: $fontColor;
-            font-size: 16px;
-            line-height: 27.2px;
-            font-weight: 700;
-            width: 197px;
-            height: 47px;
-            box-shadow: 0px 0px 10px rgba(255, 188, 218, 0.15), 0px 0px 15px #FE0072;
-            border-radius: 4px;
-            border: 1px solid #FE0072;
-            cursor: pointer;
-            &:hover{
-                background: linear-gradient(to left, #E80ECD, #FE0072);
-            }
-        }
         .header{
             position: relative;
             
         }
         .headerItemsLeft{
             position: absolute;
-            top: 20px;
-            left: -80px;
-            list-style: none;
+            top: -45px;
+            left: -220px;
             z-index: 1;
-            li{
-                font-family: 'Bai Jamjuree';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 32px;
-                line-height: 40px;
-                text-shadow: 0px 4px 20px #8439F9;
+            ul{
+                list-style: none;
+                li{
+                    position: relative;
+                    p{
+                        margin: 0;
+                        font-family: 'Bai Jamjuree';
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 32px;
+                            line-height: 40px;
+                            text-shadow: 0px 4px 20px #8439F9;
+                    }        
+                    &:nth-child(1){
+                        padding-left: 160px;
+                    }            
+                    &:nth-child(2){
+                        padding-left: 140px;
+                    }
+                    &:nth-child(3){
+                        padding-left: 10px;
+                    }
+                }
             }
         }
         .headerItemsRight{
             position: absolute;
             top: 150px;
-            right: -80px;
-            list-style: none;
+            right: -275px;
             z-index: 1;
-            li{
-                font-family: 'Bai Jamjuree';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 32px;
-                line-height: 40px;
-                text-shadow: 0px 4px 20px rgb(132, 57, 249);
+            ul{
+                list-style: none;
+                li{
+                    position: relative;
+                    p{
+                        margin: 0;
+                        font-family: 'Bai Jamjuree';
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 32px;
+                            line-height: 40px;
+                            text-shadow: 0px 4px 20px rgb(132, 57, 249);
+                    }
+                    &:nth-child(2){
+                        padding-left: 50px;
+                    }
+                    &:nth-child(3){
+                        padding-left: 85px;
+                    }
+                    &:nth-child(4){
+                        padding-left: 100px;
+                    }
+                }
             }
         }
         .headerImageCont{
@@ -106,11 +114,36 @@ $textColor: #D1D1D1;
             height: 400px;
             border: 1.5px solid grey;
             border-radius: 26px;
-            position: relative;
-            overflow: hidden;
-            img{
+            .imageCont{
+                width: 100%;
+                height: 100%;
+                position: relative;
+                overflow: hidden;
+                border-radius: 26px;
+                img{
+                    position: absolute;
+                    object-fit: cover;
+                }
+            }
+            button{
                 position: absolute;
-                object-fit: cover;
+                bottom: -15px;
+                left: 35%;
+                z-index: 2;
+                background: linear-gradient(to right, #E80ECD, #FE0072);
+                color: $fontColor;
+                font-size: 16px;
+                line-height: 27.2px;
+                font-weight: 700;
+                width: 197px;
+                height: 47px;
+                box-shadow: 0px 0px 10px rgba(255, 188, 218, 0.15), 0px 0px 15px #FE0072;
+                border-radius: 4px;
+                border: 1px solid #FE0072;
+                cursor: pointer;
+                &:hover{
+                    background: linear-gradient(to left, #E80ECD, #FE0072);
+                }
             }
         }
     }
