--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -43,3 +43,25 @@
         }
     }
 }
+@media screen and (max-width:760px) {
+    .footerCont{
+        h4{
+            font-size: 40px;
+        }
+        .footerLinks a{
+            font-size: 16px;
+        }
+    }
+
+}
+@media screen and (max-width:470px) {
+    .footerCont {
+            h4 {
+                font-size: 28px;
+            }
+    
+            .footerLinks a {
+                font-size: 14px;
+            }
+        }
+}
