--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -22,3 +22,9 @@
     text-decoration: none; 
     color: #ffffff;
 }
+
+@media screen and (max-width:760px){
+    .navCont{
+        display: none;
+    }
+}
