--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -24,7 +24,6 @@
         align-items: center;
         justify-content: center;
         gap: 20px;
-
     }
     .footerLinks{
         display: flex;
@@ -40,7 +39,20 @@
             font-weight: 400;
             font-size: 18px;
             line-height: 22px;
+            &:hover:nth-child(1){
+                font-weight: 600;
+                text-shadow: 0px 4px 20px rgb(132, 57, 249);
+            }
+            &:hover:nth-child(2){
+                font-weight: 600;
+                text-shadow: 0px 4px 20px rgb(244, 101, 211);
+            }
+            &:hover:nth-child(3){
+                font-weight: 600;
+                text-shadow: 0px 4px 20px rgb(54, 207, 67);
+            }
         }
+        
     }
 }
 @media screen and (max-width:760px) {
