--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -21,6 +21,20 @@
 .link{
     text-decoration: none; 
     color: #ffffff;
+    &:hover:nth-child(1) {
+        font-weight: 600;
+        text-shadow: 0px 4px 20px rgb(132, 57, 249);
+    }
+
+    &:hover:nth-child(2) {
+        font-weight: 600;
+        text-shadow: 0px 4px 20px rgb(237, 79, 200);
+    }
+
+    &:hover:nth-child(3) {
+        font-weight: 600;
+        text-shadow: 0px 4px 20px rgb(54, 207, 67);
+    }
 }
 
 @media screen and (max-width:760px){
