--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -41,7 +41,8 @@ $textColor: #D1D1D1;
                 gap: 10px;
                 text-transform: uppercase;
                 .coloredTitle{
-                    color: #A300F8;
+                    text-shadow: 0px 4px 20px #A300F8;
+                    color: #e5b6ff;
                 }
             }
         }
