--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -11,19 +11,18 @@ $textColor: #D1D1D1;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 30px;
-        margin-top: 20px;
+        gap: 10px;
+        margin-top: 10px;
         .title{
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 20px;
             h1{
                 margin:0;
                 font-family: 'Days One';
                 font-style: normal;
                 font-weight: 400;
-                font-size: 70px;
+                font-size: 65px;
                 line-height: 94px;
                 text-align: center;
                 text-transform: uppercase;
@@ -35,10 +34,6 @@ $textColor: #D1D1D1;
                 font-size: 20px;
                 line-height: 30px;
                 margin: 0;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 10px;
                 text-transform: uppercase;
                 .coloredTitle{
                     text-shadow: 0px 4px 20px #A300F8;
@@ -52,8 +47,8 @@ $textColor: #D1D1D1;
         }
         .headerItemsLeft{
             position: absolute;
-            top: -45px;
-            left: -220px;
+            top: 40px;
+            left: -180px;
             z-index: 1;
             ul{
                 list-style: none;
@@ -69,20 +64,20 @@ $textColor: #D1D1D1;
                             text-shadow: 0px 4px 20px #8439F9;
                     }        
                     &:nth-child(1){
-                        padding-left: 160px;
+                        padding-left: 240px;
                     }            
                     &:nth-child(2){
-                        padding-left: 140px;
+                        padding-left: 200px;
                     }
                     &:nth-child(3){
-                        padding-left: 10px;
+                        padding-left: 130px;
                     }
                 }
             }
         }
         .headerItemsRight{
             position: absolute;
-            top: 150px;
+            top: 320px;
             right: -275px;
             z-index: 1;
             ul{
@@ -105,26 +100,18 @@ $textColor: #D1D1D1;
                         padding-left: 85px;
                     }
                     &:nth-child(4){
-                        padding-left: 100px;
+                        padding-left: 120px;
                     }
                 }
             }
         }
         .headerImageCont{
             width: 600px;
-            height: 400px;
-            border: 1.5px solid grey;
-            border-radius: 26px;
+            height: 600px;
             .imageCont{
                 width: 100%;
                 height: 100%;
-                position: relative;
-                overflow: hidden;
-                border-radius: 26px;
-                img{
-                    position: absolute;
-                    object-fit: cover;
-                }
+                object-fit: contain;
             }
             button{
                 position: absolute;
@@ -139,17 +126,16 @@ $textColor: #D1D1D1;
                 border: 1px solid #FE0072;
                 cursor: pointer;
                 a{
+                    text-transform: uppercase;
                     text-decoration: none;
                     color: $fontColor;
                     font-size: 16px;
                     line-height: 27.2px;
                     font-weight: 700;
                 }
-                &:hover{
-                    a{
-                        font-size: 18px;
-                    }
-                    background: linear-gradient(to left, #E80ECD, #FE0072);
+                &:hover{  
+                    background: linear-gradient(to right, #f96de8, #bf0056);
+                    box-shadow: 0px 0px 10px rgba(168, 80, 120, 0.15), 0px 0px 15px #b60152;
                 }
             }
         }
