--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -8,6 +8,9 @@
     background: none;
     font-family: 'Bai Jamjuree';
     font-style: normal;
+    .navCollapse{
+        justify-content: flex-end;
+    }
 }
 .lang{
     display: flex;
@@ -44,23 +47,17 @@
     text-decoration: none; 
     color: #ffffff;
     &:hover:nth-child(1) {
-        font-weight: 600;
+
         text-shadow: 0px 4px 20px rgb(132, 57, 249);
     }
 
     &:hover:nth-child(2) {
-        font-weight: 600;
+
         text-shadow: 0px 4px 20px rgb(237, 79, 200);
     }
 
     &:hover:nth-child(3) {
-        font-weight: 600;
-        text-shadow: 0px 4px 20px rgb(54, 207, 67);
-    }
-}
 
-@media screen and (max-width:760px){
-    .navCont{
-        display: none;
+        text-shadow: 0px 4px 20px rgb(54, 207, 67);
     }
 }
