correccion de links

--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -172,6 +172,7 @@ $textColor: #D1D1D1;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-top: 40px;
         .contactLinks{
             position: relative;
             width: 630px;
