--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -127,7 +127,7 @@ $textColor: #D1D1D1;
                 border: 1px solid #FE0072;
                 cursor: pointer;
                 a{
-                    padding: 10px;
+                    padding: 10px 40px;
                     text-transform: uppercase;
                     text-decoration: none;
                     color: $fontColor;
