--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -62,6 +62,10 @@ $textColor: #D1D1D1;
                             font-size: 32px;
                             line-height: 40px;
                             text-shadow: 0px 4px 20px #8439F9;
+                            cursor: pointer;
+                            &:hover{
+                                font-size: 36px;
+                            }
                     }        
                     &:nth-child(1){
                         padding-left: 240px;
@@ -78,7 +82,7 @@ $textColor: #D1D1D1;
         .headerItemsRight{
             position: absolute;
             top: 320px;
-            right: -275px;
+            right: -235px;
             z-index: 1;
             ul{
                 list-style: none;
@@ -92,6 +96,10 @@ $textColor: #D1D1D1;
                             font-size: 32px;
                             line-height: 40px;
                             text-shadow: 0px 4px 20px rgb(132, 57, 249);
+                            cursor: pointer;
+                            &:hover {
+                                font-size: 34px;
+                            }
                     }
                     &:nth-child(2){
                         padding-left: 50px;
