--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -153,6 +153,40 @@ $textColor: #D1D1D1;
             }
         }
     }
+    .scroller{
+        display: none;
+        width: 100%;
+        margin: 80px auto 0 auto;
+        overflow: hidden;
+        @keyframes scroll {
+                from{
+                    transform: translateX(0);
+                }
+                to{
+                    transform: translateX(-100%);
+                }
+            }
+        .scrollerInner{
+            display: none;
+            padding-block: 1rem;
+            width: full;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            list-style: none;
+            animation: scroll 10s linear infinite;
+            li{
+                margin: 0;
+                font-family: 'Bai Jamjuree';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 1.5rem;
+                line-height: 40px;
+                text-shadow: 0px 4px 20px rgb(132, 57, 249);
+                text-transform: uppercase;
+            }
+        }
+    }
     .about{
         display: flex;
         justify-content: center;
@@ -336,6 +370,9 @@ $textColor: #D1D1D1;
                 }
             }
         }
+        // .scroller{
+        //     display: flex;
+        // }
         .about{
             .aboutTitle{
                 top: 150px;
